# sofigs-ml

./: .gitignore  README.md  analysis.ipynb  main.py  makefile  pyproject.toml  requirements.txt  ruff.toml  run.py
_docs/: sources.md
app/common/: enums.py  schemas.py  validators.py
app/modules/categories/services/: __init__.py  category_tree.py
app/modules/ml/: model.py  sasrec_model.py
